--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,14 +8,14 @@ website:
     left: 
           - href: index.qmd
             text: Home
-          - href: lecture1.qmd
-            text: Lecture 1
-          - href: lecture2.qmd
-            text: Lecture 2
-          - href: lecture3.qmd
-            text: Lecture 3
-          - href: lecture4.qmd
-            text: Lecture 4
+          # - href: lecture1.qmd
+          #   text: Lecture 1
+          # - href: lecture2.qmd
+          #   text: Lecture 2
+          # - href: lecture3.qmd
+          #   text: Lecture 3
+          # - href: lecture4.qmd
+          #   text: Lecture 4
           - href: sylabus.qmd
             text: Syllabus
           - href: info.qmd
