--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,8 +10,8 @@ website:
             text: Home
           - href: lecture1.qmd
             text: Lecture 1
-          # - href: lecture2.qmd
-          #   text: Lecture 2
+          - href: lecture2.qmd
+            text: Lecture 2
           # - href: lecture3.qmd
           #   text: Lecture 3
           # - href: lecture4.qmd
