--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,27 +6,37 @@ website:
   title: Real-Time Analytics
   description: "Lectures for SGH Warsaw School of Economics students"
   site-url: https://sebkaz-teaching.github.io/RTA_2025EN
+  sidebar:
+    style: "docked"
+    contensts:
+      - index.qmd
+      - section: "Lectures"
+        contents:
+        - lectures/lecture1.qmd
+        - lectures/lecture2.qmd
+        - lectures/lecture3.qmd
+        - lectures/lecture4.qmd
+        - lectures/lecture5.qmd
+      - section: "Labs"
+        contents:
+        - section: "Apache Kafka"
+          contenst:
+          
+        - section: "Python codes"
+          contents:
+
+
   navbar:
     left: 
-          - href: index.qmd
-            text: Home
-          - href: sylabus.qmd
-            text: Syllabus
-          - href: info.qmd
-            text: Tools
-          - href: books.qmd
-            text: Books
-    right: 
-          - href: lecture1.qmd
-            text: Lecture 1
-          - href: lecture2.qmd
-            text: Lecture 2
-          - href: lecture3.qmd
-            text: Lecture 3
-          - href: lecture4.qmd
-            text: Lecture 4
-          - href: lecture5.qmd
-            text: Lecture 5
+      - href: index.qmd
+        text: Home
+      - href: sylabus.qmd
+        text: Syllabus
+      - href: info.qmd
+        text: Tools
+      - href: books.qmd
+        text: Books
+    
   page-footer: "Copyright 2024, Sebastian Zajac"      
 format:
   html:
